--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 version = 0.001
 
-name    = App-cryp-Exchange
+name    = App-cryp-exchange
 
 [@Author::PERLANCAR]
 :version=0.59
@@ -25,4 +25,3 @@ Role::Tiny::With=0
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.69
-
