--- a/dist.ini
+++ b/dist.ini
@@ -11,17 +11,20 @@ name    = App-cryp-exchange
 perl=5.010001
 strict=0
 warnings=0
-App::btcindo=0.018
+App::indodax=0
 Complete::Util=0.57
-Finance::BTCIndo=0.007
 Finance::GDAX::Lite=0
+Finance::Indodax=0
 Log::ger=0.023
+Log::Log4perl=0
 Perinci::CmdLine::cryp=0.004
 PERLANCAR::Module::List=0
 Role::Tiny=0
 Role::Tiny::With=0
+WebService::Cryptopia=0
 
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.69
+
