--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.001
+version = 0.002
 
 name    = App-cryp-exchange
 
@@ -17,6 +17,10 @@ Finance::GDAX::Lite=0
 Finance::Indodax=0
 Log::ger=0.023
 Log::Log4perl=0
+;!lint_prereqs assume-used undetected
+Log::Log4perl::Appender::LogGer=0
+;!lint_prereqs assume-used undetected
+Log::Log4perl::Layout::SimpleLayout=0
 Perinci::CmdLine::cryp=0.004
 PERLANCAR::Module::List=0
 Role::Tiny=0
@@ -27,4 +31,3 @@ WebService::Cryptopia=0
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.69
-
