Remove cryptopia for now because WebService::Cryptopia's api_private() doesn't seem to work

--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,9 @@ name    = App-cryp-exchange
 [@Author::PERLANCAR]
 :version=0.59
 
+[PruneFiles / PruneFiles additional]
+filename = lib-excluded
+
 [Prereqs / TestRequires]
 
 [Prereqs]
