--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.005
+version = 0.006
 
 name    = App-cryp-exchange
 
@@ -14,7 +14,7 @@ filename = lib-excluded
 perl=5.010001
 strict=0
 warnings=0
-Complete::Util=0.57
+DateTime::Format::ISO8601=0
 Finance::GDAX::Lite=0
 Finance::Indodax=0.010
 Log::ger=0.023
@@ -24,6 +24,7 @@ Log::Log4perl::Appender::LogGer=0
 Log::Log4perl::Layout::SimpleLayout=0
 Perinci::CmdLine::cryp=0.006
 PERLANCAR::Module::List=0
+POSIX=0
 Role::Tiny=0
 Role::Tiny::With=0
 
