--- a/dist.ini
+++ b/dist.ini
@@ -14,16 +14,15 @@ filename = lib-excluded
 perl=5.010001
 strict=0
 warnings=0
-App::indodax=0
 Complete::Util=0.57
-Finance::GDAX::Lite=0
-Finance::Indodax=0
+Finance::CoinbasePro::Lite=0
+Finance::Indodax=0.011
 Log::ger=0.023
 ;!lint_prereqs assume-used undetected
 Log::Log4perl::Appender::LogGer=0
 ;!lint_prereqs assume-used undetected
 Log::Log4perl::Layout::SimpleLayout=0
-Perinci::CmdLine::cryp=0.004
+Perinci::CmdLine::cryp=0.006
 PERLANCAR::Module::List=0
 Role::Tiny=0
 Role::Tiny::With=0
@@ -31,5 +30,8 @@ Role::Tiny::With=0
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
-Rinci=1.1.69
+Rinci=1.1.87
 
+[Extras / lint-prereqs / assume-provided]
+; avoid circular dependency
+App::indodax=0
